Invites page fixes * Bumped up character limit to 80 for names and 200 for emails (and use name limit for name) * Added info message if no contacts are found on a webmail account * Added info message if no new non-member contacts are found on a webmail account * Added error message if "From" is blank * Removed supported accounts for scrapers that failed to work or were not recognized (indiatimes.com non-functional, gmx and icqmail not supported) * Combined hotmail and msn into one account since msn is defunct * Suppress scraping the account owner's email from webmail contacts (some providers automatically include the owner) * Suppress inclusion of the member's email from webmail contacts (this allowed self-friending)

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -201,18 +201,21 @@ inviteManualTitle = Add the friends you want to invite:
 inviteFriendName = Enter your friend''s name...
 inviteFriendEmail = Enter your friend''s e-mail...
 inviteInvalidEmail = The e-mail address is improperly formatted.
+inviteEmptyFromField = Please fill in your name in the "From" field
 inviteAdd = Add
 
 inviteGrabber = Or import e-mail addresses from your webmail account:
 inviteSupported = Supported Accounts
-inviteSupportedList = <b>Supported Accounts:</b><br>\
-  Hotmail<br>MSN<br>Yahoo<br>Gmail<br>AOL<br>Lycos<br>RediffMail<br>\
-  Indiatimes<br>.Mac<br>mail.com<br>FastMail.FM<br>GMX<br>IcqMail<br>Web.de<br>MyNet.com
+inviteSupportedList = <b>Supported Accounts:</b><br>MSN Hotmail<br>Yahoo<br>Gmail<br>AOL<br>\
+ Lycos<br>RediffMail<br>.Mac<br>mail.com<br>FastMail.FM<br>Web.de<br>MyNet.com
+
 inviteWebAddress = Enter your webmail address...
 inviteWebPassword = password:
 inviteWebImport = Import
 inviteEnterWebAddress = Webmail address is missing
 inviteEnterWebPassword = Webmail password is missing
+inviteNoContacts = No contacts found for {0}, please try a different account or add some contacts.
+inviteNoNewNonMembers = No new contacts found for {0}, please try a different account.
 
 inviteListName = Name
 inviteListRemove = Remove
