Added optional skip link below the invite button on the friend invites panel. This will be enabled for the B group after their registration is submitted

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -250,6 +250,8 @@ invitePendingTip = You can email or IM this URL to your friend in case they don'
   receive our invitation email.
 inviteNoPending = You currently have no pending invitations.
 
+inviteSkipButton = Skip
+
 #
 # InviteFriendPopup
 
