--- a/build.xml
+++ b/build.xml
@@ -792,7 +792,7 @@
 
   <!-- generates fields for persistent record classes -->
   <target name="genrecord" depends="prepare">
-    <taskdef name="grecord" classname="com.samskivert.jdbc.depot.tools.GenRecordTask"
+    <taskdef name="grecord" classname="com.samskivert.depot.tools.GenRecordTask"
              classpathref="classpath"/>
     <!-- make sure the record class files are all compiled -->
     <javac srcdir="${src.dir}" destdir="${classes.dir}" includeAntRuntime="false"
