A promotion system wherein a small icon and a blurb are shown to the user at the top of the Me page. Still TODO: integrate a date picker widget and allow the start and end times for the promotion to be properly configured.

--- a/src/gwt/client/adminz/AdminMessages.properties
+++ b/src/gwt/client/adminz/AdminMessages.properties
@@ -27,8 +27,9 @@ inviteControls = Invitation functions:
 displayDashboard = Display Dashboard
 reviewButton = Review Flagged Items
 issueInvites = Issue Invites to Players
+promosButton = Promotions
 affMapButton = View affiliate mappings
-browserPlayers = Player Browser
+browseButton = Player Browser
 viewABTests = View or Create A/B Tests
 viewBureaus = View Bureau Activity
 viewExchange = Exchange
@@ -146,6 +147,7 @@ abTestEnded = Ended
 
 #
 # Affiliate mappings
+
 affMapTitle = Affiliate Mappings
 affiliate = Affiliate
 memberId = memberId
@@ -154,6 +156,7 @@ badMemberId = Could not parse memberId: {0}.
 
 #
 # Cashout
+
 cashOutButton = Bling Cash Outs
 cashOutTitle = Bling Cash Outs
 cashOutEmptyMessage = <Empty>
@@ -172,6 +175,7 @@ cashOutEntryCashOutSuccess = The bling has been successfully cashed out.
 
 #
 # Bureau
+
 bureauServiceFailed = Failed to get bureau information
 bureauRequestRefresh = Refresh Data
 bureauRefreshPage = Refresh Page
@@ -185,3 +189,9 @@ bureauLaunchTime = Last launch time
 bureauFirstRun = Not yet shutdown
 bureauShutdownTime = Last shutdown time
 bureauMessage = Message
+
+#
+# PromoEditor
+
+promoTitle = Promotion Editor
+promoCreate = Create Promotion
