--- a/src/gwt/client/adminz/AdminMessages.properties
+++ b/src/gwt/client/adminz/AdminMessages.properties
@@ -193,5 +193,15 @@ bureauMessage = Message
 #
 # PromoEditor
 
+promoLoading = Loading...
 promoTitle = Promotion Editor
 promoCreate = Create Promotion
+
+promoId = Promo ID
+promoBlurb = Blurb
+promoIcon = Icon
+promoStarts = Starts
+promoEnds = Ends
+promoChange = Change...
+promoPreview = Preview:
+promoAdd = Publish Promotion
