--- a/.classpath
+++ b/.classpath
@@ -115,5 +115,6 @@
 	<classpathentry kind="lib" path="extlibs/java/rabbitmq-client.jar"/>
 	<classpathentry kind="lib" path="extlibs/java/quartz.jar"/>
 	<classpathentry kind="lib" path="extlibs/java/gwt-dnd.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/advanced-components-1.4.1.jar"/>
 	<classpathentry kind="output" path="dist/classes"/>
 </classpath>
