New #me-contests page listing our current contests.  TODO - if we're sticking with this rather than using an announcement group or the wiki, move the content to the database so it can be edited via the admin panel like the new promotion system.

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -13,6 +13,7 @@ titleCreators = Whirled Welcomes Creators
 titlePassport = Passport
 titlePassportTest = Passport Image Test
 titleDAContest = Design Your Whirled Contest
+titleContests = Contests
 
 #
 # My Whirled
@@ -222,5 +223,12 @@ dacontestJudging = Contest entries will be judged based on technical skill, orig
   creativity.<br /><br /><br />\
   <b>Judges:</b> <a href="#people-8">Cleaver: CEO and Hand-waver</a>, <br />\
   <a href="#people-12">Nemo: Lead Artist</a>, <a href="#people-13">Brittney: Artist</a>, <br /> \
-  <a href="#people-316">Billiam: Artist</a>, <a href="#people-12770">Vortex: Lead Agent</a>
-  
+  <a href="#people-316">Billiam: Artist</a>, <a href="#people-12770">Vortex: Lead Agent</a> 
+
+#
+# Contests
+
+contestsIntro = Here you will find official contests being run by Whirled.  Be sure to check \
+  back often to see what great new prizes are available each month!
+contestsCurrent = Current Contests
+contestsPrizes = Prizes
