--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -379,3 +379,31 @@ feedCategory4 = Game Trophies
 feedCategory5 = Updated Rooms
 feedCategory6 = Passport Stamps
 feedCategory7 = Levelling
+
+#
+# Contests
+
+contestsTitle_GameCreator = Game Creator Challenge
+contestsLink_GameCreator = http://www.dev.threerings.net/whirled/contest.html
+contestsText_GameCreator = A standing game development contest that runs every three months. \
+  All games that are uploaded to Whirled during the contest period and comply with the terms and \
+  conditions are eligible.  There are two categories for prices - single and multiplayer games.
+contestsStatus_GameCreator = The submission deadline is 11:59 PM PST on January 31, 2009
+contestsPrizes_GameCreator = <b>1st Place: $7,500</b><br/> 2nd Place: $5,000<br/> 3rd Place: \
+  $4,000<br/> 4th Place: $2,000<br/> 5th Place: $1,000
+  
+contestsTitle_DesignYour = Design Your Whirled
+contestsLink_DesignYour = #me-dacontesti
+contestsText_DesignYour = A contest in conjunction with deviantart.com.  Create the best room on \
+  Whirled and win great prizes!
+contestsStatus_DesignYour = Status: Judging
+contestsPrizes_DesignYour = <b>1st: MacBook Pro</b><br/> 2nd: Wacom Cintiq<br/> 3rd: Wacom Intuos3
+
+contestsTitle_HideAndGhost = Hide and Ghost Seek
+contestsLink_HideAndGhost = http://wiki.whirled.com/Hide_and_Ghost_Seek
+contestsText_HideAndGhost = Follow the Ghost through Whirled.  Be the first to catch her in a \
+  room and say the secret password, and win a prize!  Games will be run as time is available. \
+  Ongoing event.
+contestsStatus_HideAndGhost = Status: Ongoing
+contestsPrizes_HideAndGhost = Ghost <a href="#world-s55305">Plushie</a><br /> \
+  Ghost Seek <a href="#world-s55305">Backdrop</a>
