Move links to the contest title html and track clicks on them.

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -383,7 +383,8 @@ feedCategory7 = Levelling
 #
 # Contests
 
-contestsTitle_GameCreator = Game Creator Challenge
+contestsTitle_GameCreator = <a href="http://www.dev.threerings.net/whirled/contest.html">Game \
+  Creator Challenge</a>
 contestsLink_GameCreator = http://www.dev.threerings.net/whirled/contest.html
 contestsText_GameCreator = A standing game development contest that runs every three months. \
   All games that are uploaded to Whirled during the contest period and comply with the terms and \
@@ -392,15 +393,14 @@ contestsStatus_GameCreator = The submission deadline is 11:59 PM PST on January 
 contestsPrizes_GameCreator = <b>1st Place: $7,500</b><br/> 2nd Place: $5,000<br/> 3rd Place: \
   $4,000<br/> 4th Place: $2,000<br/> 5th Place: $1,000
   
-contestsTitle_DesignYour = Design Your Whirled
-contestsLink_DesignYour = #me-dacontesti
+contestsTitle_DesignYour = <a href="#me-dacontesti">Design Your Whirled</a>
 contestsText_DesignYour = A contest in conjunction with deviantart.com.  Create the best room on \
   Whirled and win great prizes!
 contestsStatus_DesignYour = Status: Judging
 contestsPrizes_DesignYour = <b>1st: MacBook Pro</b><br/> 2nd: Wacom Cintiq<br/> 3rd: Wacom Intuos3
 
-contestsTitle_HideAndGhost = Hide and Ghost Seek
-contestsLink_HideAndGhost = http://wiki.whirled.com/Hide_and_Ghost_Seek
+contestsTitle_HideAndGhost = <a href="http://wiki.whirled.com/Hide_and_Ghost_Seek">Hide and \
+  Ghost Seek</a>
 contestsText_HideAndGhost = Follow the Ghost through Whirled.  Be the first to catch her in a \
   room and say the secret password, and win a prize!  Games will be run as time is available. \
   Ongoing event.
