Typo: prices -> prizes

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -388,7 +388,7 @@ contestsTitle_GameCreator = <a href="http://www.dev.threerings.net/whirled/conte
 contestsLink_GameCreator = http://www.dev.threerings.net/whirled/contest.html
 contestsText_GameCreator = A standing game development contest that runs every three months. \
   All games that are uploaded to Whirled during the contest period and comply with the terms and \
-  conditions are eligible.  There are two categories for prices - single and multiplayer games.
+  conditions are eligible.  There are two categories for prizes - single and multiplayer games.
 contestsStatus_GameCreator = The submission deadline is 11:59 PM PST on January 31, 2009
 contestsPrizes_GameCreator = <b>1st Place: $7,500</b><br/> 2nd Place: $5,000<br/> 3rd Place: \
   $4,000<br/> 4th Place: $2,000<br/> 5th Place: $1,000
