Typo: wrong link for the Game Creator challenge.

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -383,9 +383,8 @@ feedCategory7 = Levelling
 #
 # Contests
 
-contestsTitle_GameCreator = <a href="http://www.dev.threerings.net/whirled/contest.html">Game \
+contestsTitle_GameCreator = <a href="http://www.threerings.net/whirled/contest.html">Game \
   Creator Challenge</a>
-contestsLink_GameCreator = http://www.dev.threerings.net/whirled/contest.html
 contestsText_GameCreator = A standing game development contest that runs every three months. \
   All games that are uploaded to Whirled during the contest period and comply with the terms and \
   conditions are eligible.  There are two categories for prizes - single and multiplayer games.
