Fix enter button in IE (IE doesn't default to left:0 when position:absolute), and increase space for group name and blurb.  Swap to MsoyUI panel creation functions and FloatPanels instead of absolute positioning.

--- a/src/gwt/client/groups/GroupsMessages.properties
+++ b/src/gwt/client/groups/GroupsMessages.properties
@@ -143,7 +143,7 @@ group to edit the room. The room will be removed for your rooms list and added t
 You cannot transfer your current home room, and this cannot be undone.
 detailBrowseShop = Shop for related {0}!
 
-detailOnline = {0} online now!
+detailOnline = {0} in the hall now!
 
 #
 # GroupMembersPanel
