Have two buttons directly on the page, one to create, one to edit.

--- a/src/gwt/client/editem/EditemMessages.properties
+++ b/src/gwt/client/editem/EditemMessages.properties
@@ -236,3 +236,8 @@ propLabel = Prop Media
 propTip = Prop as seen in rooms
 
 errPropNotFlash = Props must be a web-viewable image type.
+
+#
+# ItemMediaUploader
+editImage = Edit image
+createImage = Create a new image
