--- a/build.xml
+++ b/build.xml
@@ -687,6 +687,21 @@
     <antcall target="ascompile"><param name="astype" value="imageeditor"/></antcall>
   </target>
 
+  <!-- builds our media uploader -->
+  <target name="uploader" depends="asprepare">
+    <exec executable="${basedir}/bin/mxmlc" failonerror="true">
+      <arg value="-load-config"/>
+      <arg value="etc/msoy-config.xml"/>
+      <arg value="-compiler.optimize"/>
+      <arg value="-compiler.source-path=${asrc.dir}/"/>
+      <arg value="-output"/>
+      <arg value="${deploy.dir}/MediaUploader.swf"/>
+      <arg value="-file-specs"/>
+      <arg value="${asrc.dir}/MediaUploader.as"/>
+    </exec>
+    <copy file="${deploy.dir}/MediaUploader.swf" todir="pages/clients/${version}"/>
+  </target>
+
   <!-- builds our video player -->
   <target name="videoplayer" depends="asprepare">
     <exec executable="${basedir}/bin/mxmlc" failonerror="true">
@@ -1023,7 +1038,7 @@
   <!-- TODO: the tutorial target has been removed from flashapps until it compiles again after a
        the API shuffle is done, and the tutorial code has been refactored -->
   <!-- builds top-level flash applications. -->
-  <target name="flashapps" depends="asprepare,mediastub,embedstub,videoplayer,audioplayer,remixer,imageeditor"
+  <target name="flashapps" depends="asprepare,mediastub,embedstub,videoplayer,audioplayer,remixer,imageeditor,uploader"
           description="Rebuilds all of our Flash clients and applets.">
     <antcall target="ascompile"><param name="astype" value="world"/></antcall>
     <antcall target="ascompile"><param name="astype" value="game"/></antcall>
