Move the flash game contest page from threerings.net to #landing-gamecontest.  If there's a better way to do big blocks of html I'd like to hear it.

--- a/src/gwt/client/landing/LandingMessages.properties
+++ b/src/gwt/client/landing/LandingMessages.properties
@@ -8,6 +8,7 @@
 
 titleCreators = Whirled Welcomes Creators
 titleDAContest = Design Your Whirled DeviantArt Contest
+titleGameContest = Flash Game Developer Challenge
 
 #
 # Landing page messages
@@ -49,3 +50,126 @@ dacontestJudging = Contest entries will be judged based on technical skill, orig
 
 featuredGroupTitle = Featured Group
 featuredGroupOnline = {0} online now!
+
+#
+# Game Contest panel
+
+gameconOverviewTitle = Overview
+gameconOverviewText = <p><a href="#landing">Whirled</a> \
+  is a complete, self-serve Flash game development platform. Using Whirled it is \
+  possible to create and charge for virtual items, single and multiplayer games, \
+  avatars, furnishings, and much more by selling directly to players. It was created \
+  by online gaming pioneers Three Rings Design and represents years of \
+  micro-transaction learning packaged into a Flash development and billing \
+  framework.</p> \
+  <p>The Whirled Flash Game Developer Challenge is a standing game development contest \
+  that runs every three months. All games that are uploaded to Whirled during the \
+  contest period and comply with the below conditions are eligible.  There are two \
+  categories for prizes - single and multiplayer games.  The multiplayer game category \
+  also includes <a href="http://wiki.whirled.com/Avrg">MMO/AVRG-style games</a> that \
+  are played within the Whirled itself.</p>
+  
+gameconPrizesTitle = The Prizes
+gameconPrizesText = \
+  <div style="float: left; margin-right: 30px;"> \
+    <h3 style="margin-top: 0;">Multi-Player Game</h3> \
+    <ul> \
+      <li>1st Place: $7,500</li> \
+      <li>2nd Place: $5,000</li> \
+      <li>3rd Place: $4,000</li> \
+      <li>4th Place: $2,000</li> \
+      <li>5th Place: $1,000</li> \
+    </ul> \
+  </div> \
+  <div style="float: left;"> \
+    <h3 style="margin-top: 0;">Single-Player Game</h3> \
+    <ul> \
+      <li>1st Place: $2,000</li> \
+      <li>2nd Place: $1,500</li> \
+      <li>3rd Place: $1,000</li> \
+      <li>4th Place: $750</li> \
+      <li>5th Place: $250</li> \
+    </ul> \
+  </div> \
+  <div style="clear: both;"><!-- clear --></div>
+
+gameconDatesTitle = Dates & Deadlines
+gameconDatesText = <p>The Whirled Flash Game Developer Challenge runs every three \
+  months. Games submitted to Whirled in a given three-month window are eligible for that \
+  quarter''s prizes. So, if you miss the first one, don''t worry! You can still enter the \
+  next one.</p> \
+  <p>The dates for the first Whirled Flash Game Developer Challenge are from \
+  November 1, 2008 to January 31, 2009. The submission deadline is 11:59 PM PST on \
+  January 31, 2009.</p>
+  
+gameconConditionsTitle = Conditions
+gameconConditionsText = \
+  <ul> \
+    <li>You must be the original creator of any games you upload to own all rights to it.</li> \
+    <li>Whether you are awarded a contest prize or not, you are eligible for the items sales \
+        revenue share and game developer bonus programs.</li> \
+    <li>To be eligible for the contest, games may not contain advertising or links to 3rd \
+        party sites. Links to your own site and/or that of your sponsor are allowed however.</li> \
+    <li>Your content must fulfill the technical requirements for its respective content type. \
+      <ul> \
+        <li>Multi-player games \
+          <ul> \
+            <li>Flash 9, Actionscript 3 compliant</li> \
+            <li>Uses <a href="http://wiki.whirled.com/Whirled_SDK">Whirled API</a> to \
+                store scores</li> \
+            <li>Uses Whirled API to award  \
+                <a href="http://wiki.whirled.com/Awarding_trophies">trophies</a></li> \
+            <li>Uses Whirled API for multi-player gameplay</li> \
+            <li>Include instructions, at least one screen shot, and game thumbnail</li> \
+          </ul> \
+        </li> \
+        <li>Single player games \
+          <ul> \
+            <li>Flash 9, Actionscript 3 compliant</li> \
+            <li>Uses <a href="http://wiki.whirled.com/Whirled_SDK">Whirled API</a> \
+                to store scores</li> \
+            <li>Uses Whirled API to award \
+               <a href="http://wiki.whirled.com/Awarding_trophies">trophies</a></li> \
+            <li>Include instructions, at least one screen shot, and game thumbnail</li> \
+          </ul> \
+        </li> \
+      </ul> \
+    </li> \
+    <li>Your game must comply with the official contest rules.</li> \
+    <li>Your content shall comply with the Whirled Terms of Service.</li> \
+    <li>You retain all intellectual property and distribution rights to your game. By \
+        participating in the contest and uploading your game, you grant Three Rings a \
+        non-exclusive license to display your game on Whirled.</li> \
+    <li>Demos and incomplete games are not eligible for prizes. A demo refers to a game that \
+        requires player to go to another site in order to play the complete, full game.</li> \
+    <li>If you are under 18 and are awarded a prize, consent from your parent or guardian will \
+        be required for the prize to be issued.</li> \
+    <li>Games are eligible only for the contest in the period in which they were uploaded.</li> \
+    <li>You may submit as many games as you want but can only win once in each category per \
+        contest period. You may however win in both the single and multiplayer game categories \
+        in a given contest period</li> \
+    <li>Three Rings employees are not eligible to participate.</li> \
+  </ul>
+  
+gameconEnterTitle = How to Enter
+gameconEnterText = <p>To enter, simply <a href="http://wiki.whirled.com/Upload/Game">upload</a> \
+  your game to Whirled. Please be sure to fulfill the technical requirements as per the \
+  Conditions section above.</p>
+  
+gameconJudgingTitle = Selection of Winners
+gameconJudgingText = <p>A panel of judges will judge all games submitted during each challenge. \
+  Judges will evaluate based upon the game''s originality, gameplay, accessibility, and \
+  aesthetics with consideration given as well to player ratings, total number of minutes \
+  played, and breadth of use of Whirled API.</p>
+  
+gameconRulesTitle = Full Rules & Regs
+gameconRulesText = <p><a \
+  href="http://wiki.whirled.com/Game_Developer_Challenge/Complete_and_Official_Rules">Here</a> \
+  is the full legalese.</p>
+  
+gameconFooterText = &copy; <a href="http://www.threerings.net">Three Rings Design, Inc.</a> \
+  2001-2008.
+  
+  
+  
+  
