--- a/src/gwt/client/landing/LandingMessages.properties
+++ b/src/gwt/client/landing/LandingMessages.properties
@@ -170,6 +170,9 @@ gameconRulesText = <p><a \
 gameconFooterText = &copy; <a href="http://www.threerings.net">Three Rings Design, Inc.</a> \
   2001-2008.
   
-  
-  
-  
+#
+# Game-centric landing page
+
+gamesCenterTitle = Play Games on<br/> Whirled!
+gamesCenterText = Just a few of the awesome<br/> games to play with your friends!
+gamesTagline = Play games.  Make friends.<br/>  Make stuff.
