DeviantArt contest winners landing page.  Pulled out the wide white content boxes to their own class in the hopes that we can in the future define a standard layout for these pages and reuse style elements from them.

--- a/src/gwt/client/landing/LandingMessages.properties
+++ b/src/gwt/client/landing/LandingMessages.properties
@@ -46,6 +46,83 @@ dacontestJudging = Contest entries will be judged based on technical skill, orig
   <a href="#people-316">Billiam: Artist</a>, <a href="#people-12770">Vortex: Lead Agent</a>
 
 #
+# DeviantArt contest winners page
+
+dawinnersIntro = We received so many amazing entries for our first "Design Your Whirled" \
+  Contest, that we are going to do this every month!  Look out for our next \
+  <a href="#me-contests">new contest</a> with more great prizes coming out in December! 
+
+dawinnersWinner1 = <p> \
+  <img src="/images/landing/contests/dawinners_prize_1.png" style="float: right"/> \
+  We love <a href="#world-s107217">Little Red''s Forest</a> because of the beautifully executed \
+  artwork and its "Choose Your Own Adventure" story element. Be sure to check out the different \
+  routes to Grandma''s house! <br style="clear: both;"/></p>
+
+dawinnersWinner2 = <p> \
+  <img src="/images/landing/contests/dawinners_prize_2.png" style="float: right"/> \
+  Who could resist this fantastic ride through Whirled? The extensive detail \
+  and clever use of moving backdrops are what makes <a href="#world-s119439">Whirled Train \
+  Ride</a> one of our top picks! <br style="clear: both;"/></p>
+
+dawinnersWinner3 = <p> \
+  <img src="/images/landing/contests/dawinners_prize_3.png" style="float: right"/> \
+  With so many interesting rooms, you could spend hours exploring <a href="#world-s89294">Little \
+  Monsters</a> Whirled. We love the combination of photography, sculpture, painting, and items \
+  from the shop! <br style="clear: both;"/></p>
+  
+dawinnersHonorable = All Honorable Mentions will receive a Whirled T-shirt and stickers.
+
+dawinnersOthersLeft = \
+  <a href="#world-s93060">My Whirled</a> by bogo the hobo<br/> \
+  <a href="#world-s100228">Whirled Project Entry</a> by Jeishii<br/> \
+  <a href="#world-s95968">Out of this Whirled</a> by Tas<br/> \
+  <a href="#world-s132284">Lolila Day Time</a> by bogo Ceres<br/> \
+  <a href="#world-s106245">Montblanc''s Carnival</a> by Montblanc<br/> \
+  <a href="#world-s96516">Underwater Hotel Room</a> by Chord<br/> \
+  <a href="#world-s86245">Warm Seas</a> by Mizu<br/> \
+  <a href="#world-s89894">Zylfei''s Whirled</a> by ZylFei<br/> \
+  <a href="#world-s108787">Secret Glade</a> by Swirled<br/> \
+  <a href="#world-s91205">The Clocktower</a> by Melfice<br/> \
+  <a href="#world-s91806">Steam Gear Hall</a> by Duzty<br/> \
+  <a href="#world-s87333">Steam Flying Cruiser</a> by Maximum_Spider<br/> \
+  <a href="#world-s104884">Robo Attack</a> by Phil<br/> \
+  <a href="#world-s91618">Monstropolis Suburbs</a> by gothicspork<br/> \
+  <a href="#world-s14957">Voodoo Town</a> by hazrah<br/> \
+  <a href="#world-s114781">A Tribute to Scumm</a> by Halaku<br/> \
+  <a href="#world-s120740">Knubtuck''s Whirled Room</a> by Knubtuck<br/> \
+  <a href="#world-s125067">Snakes and Ladders</a> by Liviola<br/> \
+  <a href="#world-s3399">Pookah Place</a> by Liviola<br/> \
+  <a href="#world-s31185">Nordenx Asylum</a> by Nordenx<br/> \
+  <a href="#world-s106230">Stopped in a Time Cycle</a> by Winter Evening<br/> \
+  <a href="#world-s13758">Wild Whirled West</a> by Nordenx<br/> \
+  <a href="#world-s114029">Iron Man''s Not So Secret Lair</a> by Tony Stark<br/>
+
+dawinnersOthersRight = \
+  <a href="#world-s63052">Spam Cabin</a> by Whitehawk<br/> \
+  <a href="#world-s15817">Blue Screen of Hope</a> by Tonic<br/> \
+  <a href="#world-s86208">Creat1ve Chaos</a> by psydoxart<br/> \
+  <a href="#world-s97875">Mystic Forest</a> by Butterbee<br/> \
+  <a href="#world-s47453">Twisted''s Entrance</a> by Twisted Roxy<br/> \
+  <a href="#world-s113213">Tree House</a> by RoyDante<br/> \
+  <a href="#world-s112027">Chameleon''s Beach</a> by Melon<br/> \
+  <a href="#world-s130025">Persian Balcony</a> by Cyanide<br/> \
+  <a href="#world-s100837">Egypt Tour</a> by Hopey-mean<br/> \
+  <a href="#world-s67566">Dig Site</a> by Nordenx<br/> \
+  <a href="#world-s127182">Beneath the Stars</a> by Malloriel<br/> \
+  <a href="#world-s95431">Step into my Painting</a> by Herford<br/> \
+  <a href="#world-s97594">Black and White Realm</a> by ajinak<br/> \
+  <a href="#world-s113484">Elmsfire Room</a> by PixelZombie<br/> \
+  <a href="#world-s87658">Japana Experimental Room</a> by jgmiksi<br/> \
+  <a href="#world-s130654">Whirled Art Gallery</a> by Omer<br/> \
+  <a href="#world-s92329">Bulgarian Old Room</a> by Hopey-mean<br/> \
+  <a href="#world-s108579">Calmrest Spring</a> by Mercyguy<br/> \
+  <a href="#world-s86977">Sleeping Magic Run</a> by Mercyguy<br/> \
+  <a href="#world-s95023">My Whirled</a> by backkspace<br/> \
+  <a href="#world-s20768">Meditation Garden</a> by Manawa<br/> \
+  <a href="#world-s86747">Whirled My Own</a> by 3k1k<br/> \
+  <a href="#world-s97752">British Whirled</a> by tofu-lion91<br/>
+
+#
 # Featured Group panel
 
 featuredGroupTitle = Featured Group
