--- a/src/gwt/client/editem/EditemMessages.properties
+++ b/src/gwt/client/editem/EditemMessages.properties
@@ -58,6 +58,10 @@ avatarTip = Avatar as seen in rooms
 errAvatarNotFlash = Avatar media must be flash (SWF) files. If you''d like to use \
   a regular image, please use the Easy Image Avatar, and remix it with your image. \
   See here for more details: http://www.whirled.com/#shop-l_5_1609
+makeEasyAvatar = Convert this image to an avatar?
+makeEasyAvatarDetails = Avatars may not be plain images. If you click yes, we can \
+  convert this image into an avatar with remixable attributes.
+easyAvatarName = Image Avatar
 
 #
 # DocumentEditor
