First pass at new invite panel, showing other ways to spread the whirled. This is only enabled in developement for now. The old invitepanel is used in production and embedded in the new one.

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -269,3 +269,13 @@ ifriendAdded = Friend added.
 # GalleryPanel
 galleriesTitle = Galleries
 
+#
+# SharePanel
+shareIntro = Invite Friends to Whirled and earn Coins, Bars and Bling! Have fun with more friends, \
+	and earn 30% of everything they spend at the Shop. If you invite lots of friends, you could \
+	earn enough to Cash Out your Bling into real money! \
+	<a href="http://wiki.whirled.com/Affiliate">Details</a> 
+shareLinkToWhirled = Add cool Whirled graphics for your site! Or just use this URL:
+shareSendEmail = Send Email to Friends
+shareLinkToContent = Share your Room and Games! \
+   <a href="http://wiki.whirled.com/Affiliate">Find out how!</a>
