Chopped this message down. It's mostly accurate, but you can also upload zips, but why mention that? Our code doesn't know if the zip is valid...

--- a/src/gwt/client/editem/EditemMessages.properties
+++ b/src/gwt/client/editem/EditemMessages.properties
@@ -55,9 +55,7 @@ errAudioNotAudio = Audio data must be an MP3 file.
 avatarLabel = Avatar Media
 avatarTip = Avatar as seen in rooms
 
-errAvatarNotFlash = Avatar media must be flash (SWF) files. If you''d like to use \
-  a regular image, please use the Easy Image Avatar, and remix it with your image. \
-  See here for more details: http://www.whirled.com/#shop-l_5_1609
+errAvatarNotFlash = Avatar media must be flash (SWF) files.
 makeEasyAvatar = Convert this image to an avatar?
 makeEasyAvatarDetails = Avatars may not be plain images. If you click yes, we can \
   convert this image into an avatar with remixable attributes.
