Added room-centric landing page, and replace old landing with an A/B/C test between old landing, game-centric and room-centric landing pages.  Game and room-centric landing pages have a lot of copypaste; if for some reason we end up keeping both after the test we can combine them.

--- a/src/gwt/client/landing/LandingMessages.properties
+++ b/src/gwt/client/landing/LandingMessages.properties
@@ -253,3 +253,10 @@ gameconFooterText = &copy; <a href="http://www.threerings.net">Three Rings Desig
 gamesCenterTitle = Play Games on<br/> Whirled!
 gamesCenterText = Just a few of the awesome<br/> games to play with your friends!
 gamesTagline = Play games.  Make friends.<br/>  Make stuff.
+
+#
+# Room-centric landing page
+
+roomsCenterTitle = Explore Rooms<br/> on Whirled!
+roomsCenterText = Just a few of the awesome rooms to explore with your friends!
+roomsTagline = Play games.  Make friends.<br/>  Make stuff.
