Delete the old deviant art contest pages and temporarily redirect them to the contest winners page.  Move the da contest into the "past contests" section of #me-contests.

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -231,4 +231,5 @@ dacontestJudging = Contest entries will be judged based on technical skill, orig
 contestsIntro = Here you will find official contests being run by Whirled.  Be sure to check \
   back often to see what great new prizes are available each month!
 contestsCurrent = Current Contests
+contestsPast = Past Contests
 contestsPrizes = Prizes
