--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -391,12 +391,6 @@ contestsText_GameCreator = A standing game development contest that runs every t
 contestsStatus_GameCreator = The submission deadline is 11:59 PM PST on January 31, 2009
 contestsPrizes_GameCreator = <b>1st Place: $7,500</b><br/> 2nd Place: $5,000<br/> 3rd Place: \
   $4,000<br/> 4th Place: $2,000<br/> 5th Place: $1,000
-  
-contestsTitle_DesignYour = <a href="#me-dacontesti">Design Your Whirled</a>
-contestsText_DesignYour = A contest in conjunction with deviantart.com.  Create the best room on \
-  Whirled and win great prizes!
-contestsStatus_DesignYour = Status: Judging
-contestsPrizes_DesignYour = <b>1st: MacBook Pro</b><br/> 2nd: Wacom Cintiq<br/> 3rd: Wacom Intuos3
 
 contestsTitle_HideAndGhost = <a href="http://wiki.whirled.com/Hide_and_Ghost_Seek">Hide and \
   Ghost Seek</a>
@@ -406,3 +400,6 @@ contestsText_HideAndGhost = Follow the Ghost through Whirled.  Be the first to c
 contestsStatus_HideAndGhost = Status: Ongoing
 contestsPrizes_HideAndGhost = Ghost <a href="#world-s55305">Plushie</a><br /> \
   Ghost Seek <a href="#world-s55305">Backdrop</a>
+  
+contestsPast_DesignYour = <a href="#landing-dawinners">Design Your Whirled</a> -  A contest in \
+  conjunction with deviantart.com.  Check out the <a href="#landing-dawinners">winners</a>!
