--- a/src/gwt/client/editem/EditemMessages.properties
+++ b/src/gwt/client/editem/EditemMessages.properties
@@ -127,9 +127,11 @@ errInvalidShot = The screenshot image must be a GIF, PNG or JPG and exactly {0}x
 petLabel = Pet Media
 petTip = Pet as seen in rooms
 
-errPetNotFlash = Pet media must be flash (SWF) files. If you''d like to use \
-  a regular image, please use the Easy Image Pet, and remix it with your image. \
-  See here for more details: http://www.whirled.com/#shop-l_6_404
+errPetNotFlash = Pet media must be flash (SWF) files.
+makeEasyPet = Convert this image to a pet?
+makeEasyPetDetails = Pets may not be plain images. If you click yes, we can \
+  convert this image into an pet with remixable attributes.
+easyPetName = Image Pet
 
 #
 # PhotoEditor
