New page for users to easily select one of our logos to put on their web sites by copying HTML code. The link is to the affiliate landing page. Linked to from the new invite friends page. Now enabled for production.

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -274,8 +274,15 @@ galleriesTitle = Galleries
 shareIntro = Invite Friends to Whirled and earn Coins, Bars and Bling! Have fun with more friends, \
 	and earn 30% of everything they spend at the Shop. If you invite lots of friends, you could \
 	earn enough to Cash Out your Bling into real money! \
-	<a href="http://wiki.whirled.com/Affiliate">Details</a> 
-shareLinkToWhirled = Add cool Whirled graphics for your site! Or just use this URL:
+	<a href="http://wiki.whirled.com/Affiliate">Details</a>
+shareLinkToWhirled = Add cool Whirled <a href="#people-invites_links">graphics</a> for your site! \
+	Or just use this URL:
 shareSendEmail = Send Email to Friends
 shareLinkToContent = Share your Room and Games! \
    <a href="http://wiki.whirled.com/Affiliate">Find out how!</a>
+
+#
+# LinkToWhirledPanel
+linkToWhirledIntro = Copy the html code below to put cool Whirled graphics on your own website. \
+   Earn Coins, Bars and Bling when your users click and come to Whirled. \
+   <a href="http://wiki.whirled.com/Affiliate">More Info</a>.
