--- a/src/gwt/client/adminz/AdminMessages.properties
+++ b/src/gwt/client/adminz/AdminMessages.properties
@@ -205,3 +205,7 @@ promoEnds = Ends
 promoChange = Change...
 promoPreview = Preview:
 promoAdd = Publish Promotion
+
+promoDeleteTip = Delete this promotion.
+promoDeleteConfirm = Undo is hard. Confirmation is easy. \
+  Are you sure you want to delete this promotion?
