--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -143,6 +143,7 @@ commentText = Enter the text of your comment:
 commentPosted = Comment posted.
 commentDeleted = Comment deleted.
 commentDeletionNotAllowed = You are not permitted to delete that comment.
+commentInvalid = Comments must have at least 8 letters. 
 
 postedOn = on {0}
 deletePost = [delete]
