New screen /#people-friendly showing all friendly people currently online

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -285,3 +285,8 @@ shareLinkToContent = Share your Room and Games! \
 linkToWhirledIntro = Copy the html code below to put cool Whirled graphics on your own website. \
    Earn Coins, Bars and Bling when your users click and come to Whirled. \
    <a href="http://wiki.whirled.com/Affiliate">More Info</a>.
+
+#
+# GreeterPanel
+greetersTitle = Friendly People
+noGreetersOnline = There are no Friendly People currently online.
