Always show the friendly people banner on the me page and have it link to the friendly people page

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -59,7 +59,7 @@ nextFindTip = Search by real name, Whirled name or email address.
 
 nextFriendClick = Click a friend to visit!
 
-nextGreeters = Friendly People
+nextGreeters = <a href="/#people-friendly">Friendly People</a>
 
 nextPassportTip = Click "GO" on these Whirled Passport stamps to go right to the fun, and earn \
   coins at the same time!
