dA winners page corrections.

--- a/src/gwt/client/landing/LandingMessages.properties
+++ b/src/gwt/client/landing/LandingMessages.properties
@@ -7,7 +7,7 @@
 # Page titles
 
 titleCreators = Whirled Welcomes Creators
-titleDAContest = Design Your Whirled DeviantArt Contest
+titleDAContestWinners = Design Your Whirled DeviantArt Contest Winners
 titleGameContest = Flash Game Developer Challenge
 
 #
@@ -76,12 +76,12 @@ dawinnersOthersLeft = \
   <a href="#world-s93060">My Whirled</a> by bogo the hobo<br/> \
   <a href="#world-s100228">Whirled Project Entry</a> by Jeishii<br/> \
   <a href="#world-s95968">Out of this Whirled</a> by Tas<br/> \
-  <a href="#world-s132284">Lolila Day Time</a> by bogo Ceres<br/> \
+  <a href="#world-s132284">Lolila Day Time</a> by Ceres<br/> \
   <a href="#world-s106245">Montblanc''s Carnival</a> by Montblanc<br/> \
-  <a href="#world-s96516">Underwater Hotel Room</a> by Chord<br/> \
+  <a href="#world-s96516">Underwater Hotel Room</a> by chard<br/> \
   <a href="#world-s86245">Warm Seas</a> by Mizu<br/> \
   <a href="#world-s89894">Zylfei''s Whirled</a> by ZylFei<br/> \
-  <a href="#world-s108787">Secret Glade</a> by Swirled<br/> \
+  <a href="#world-s108787">Secret Glade</a> by Taz Saints<br/> \
   <a href="#world-s91205">The Clocktower</a> by Melfice<br/> \
   <a href="#world-s91806">Steam Gear Hall</a> by Duzty<br/> \
   <a href="#world-s87333">Steam Flying Cruiser</a> by Maximum_Spider<br/> \
